# purejaxrl

./: ppo.ipynb  ppo_ger.ipynb  ppo_parallel_grad.ipynb  pyproject.toml
examples/: brax_minatar.ipynb  parallel_ger.ipynb  parallel_grad.ipynb  walkthrough.ipynb
logs/: result_visualization.ipynb
purejaxrl/: ppo.py
