[tool.poetry]
name = "purejaxrl"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jax = "^0.4.23"
jaxlib = "^0.4.23"
gymnax = "^0.0.6"
distrax = "^0.1.5"
optax = "^0.1.8"
flax = "^0.8.0"
brax = "^0.9.4"
numpy = "^1.26.3"
evosax = "^0.1.5"
jax-tqdm = "^0.1.1"
tensorboard = "^2.15.2"
pandas = "^2.2.0"
plotly = "^5.18.0"
seaborn = "^0.13.2"
nbformat = "^5.9.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
